Fix: footer overflow

--- a/style/footter.css
+++ b/style/footter.css
@@ -1,24 +1,53 @@
 /*#009d71 ; #2ca880 ; #97bd9e ; #789dca ; #88a7d0*/
 
 .footer h4 {
-    padding: 10px 10px 10px 0px ;
+    padding: 10px 0 10px 0px ;
 }
 
 footer {
-    padding: 15px 0px 0px 0px;
-    margin: 25px 0px 0px 0px;
+    /* padding: 15px 0px 0px 0px; */
+    /* margin: 25px 0px 0px 0px; */
     /*Color de fondo*/
     background-color: #fff;
     /*Bordeamos el radio*/
-    border-radius: 0.5rem;
+    /* border-radius: 0.5rem; */
+    margin-top: 100px;
+    
 }
-.fondo {
-    margin: 15px 0px 0px 0px;
-    padding: 5px;
+#links{
+
+    padding-top: 20px;
+    padding-bottom: 30px;
+}
+#fondo {
+    /* margin: 15px 0px 0px 0px;
+    padding: 5px; */
+    padding-top: 10px;
+    padding-bottom: 10px;
     background-color: #88a7d0 ;
 }
-
+.fondo-item{
+    width: 210px;
+}
 .text {
     text-shadow: 1px;
     color: #fff;
+}
+.links-column{
+    width: 210px;
+}
+.links-column--link{
+    margin-bottom: 3px;
+}
+@media (max-width: 768px){
+    #links,
+    #fondo{
+        flex-direction: column !important;
+    }
+    .links-column{
+        margin-bottom: 30px;
+    }
+    .fondo-item{
+        margin-bottom: 5px;
+    }
 }
